Thu Dec  2 00:10:04 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): A VM can not always be killed only because an
	  objspace has no reference to it; a VM can be seen "outside" of
	  itself.  Namely a VM's itself anf its parent are not suitable
	  here to be freed.  Note however, that this criteria is a
	  heuristic given a VM "lives" in other VM's objspace and do not
	  move across a homeground VM i.e.  VMs holds parent-child
	  relationships.  If this is broken -- when a child lives longer
	  than a parent -- the situation gets much complex.

Wed Dec  1 19:35:54 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): Ensure to free objects.  Before this
	  there has been no chance for a object to be freed when a VM
	  shuts down, which led to memory leaks.  I'm still not sure if
	  rb_objspace_free is the right place to deallocate those as-yet
	  living objects so if someone thinks it isn't, please tell me.

Tue Nov 30 21:29:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/vm.h (ruby_vm_at_exit): new method.

	* mvm.c (ruby_vm_at_exit): new method.

	* vm_core.h (rb_vm_struct): new field.

	* vm.c (vm_init2): initialize the new field.

	* vm.c (ruby_vmptr_destruct): kick the functions.

Tue Nov 30 16:47:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): When reaching to this condition this
	  mutex is locked, and a locked mutex cannot be destroyed.
	  Personal impression: it is pthread's fault that a locked mutex
	  cannot be destroyed.  Instead I believe a mutex should be
	  destroyed under a lock.  Because when not locked another thread
	  might lock that mutex.  So for instance after this change,
	  another thread can gain a lock between those
	  native_thread_unlock() and native_thread_lock_destroy() calls,
	  and result in a broken behaviour.  If it were designed to need a
	  lock before a destruction that wont happen, because only one
	  thread can lock a specific mutex.